examples/test/testpolicy7075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7075
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key33: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value5
          key17: value5
      podSelector:
        matchLabels:
          key41: value38
          key31: value48
